--- a/style.css
+++ b/style.css
@@ -145,6 +145,59 @@ footer li a.instagram { background-position: 0 100%; }
   margin: 0 0 25px 0;
 }
 
+.modal_layer {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.3);
+  display: none;
+}
+
+.modal {
+  display: none;
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  z-index: 3;
+  width: 660px;
+  padding: 125px 70px 70px 70px;
+  margin: 0 0 0 -400px;
+  background: white;
+  text-align: left;
+}
+
+#team .modal p {
+  padding: 0;
+  font-size: 20px;
+}
+#team .modal img {
+  display: inline-block;
+  width: 96px;
+  margin: 0 30px 20px 0;
+  vertical-align: middle;
+}
+
+.modal a.close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 2;
+  width: 30px;
+  height: 30px;
+  text-indent: -9000px;
+  background: transparent url("img/icon_close.png") 0 0 no-repeat;
+}
+
+.modal h3 {
+  display: inline-block;
+  font-size: 24px;
+  font-weight: normal;
+  vertical-align: middle;
+}
+
 @media (max-width: 875px) {
   #team li {
     width: 48%;
@@ -190,6 +243,14 @@ footer li a.instagram { background-position: 0 100%; }
   footer {
     padding: 35px 0;
   }
+
+  .modal {
+    left: 0;
+    margin: 0;
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+  }
 }
 
 @media (max-width: 480px) {
@@ -217,7 +278,7 @@ footer li a.instagram { background-position: 0 100%; }
     background-position: -20px 0;
     background-size: 90px auto;
   }
-  nav { 
+  nav {
     padding-bottom: 0;
     text-align: right;
   }
@@ -243,4 +304,3 @@ footer li a.instagram { background-position: 0 100%; }
     padding: 0 36px 40px 30px;
   }
 }
-
